# Renovate

./: .dockerignore  .env_example  .gitignore  Dockerfile  README.md  config_example.json  pyproject.toml  renovate.py  utils.py
.github/workflows/: main.yml
handlers/: __init__.py  http.py
services/: __init__.py  battlenet.py  orbis.py  prospero.py  steam.py
