[tool.poetry]
name = "Renovate"
version = "1.0.0"
description = "A Battle.net, PlayStation, and Steam title watcher that reports updates via Discord."
authors = ["Ethan C <EthanC@GitHub.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.23.3"
loguru = "^0.6.0"
notifiers = "^1.3.3"

[tool.poetry.dev-dependencies]
pylint = "^2.15.10"
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
