[tool.poetry]
name = "Renovate"
version = "1.0.0"
description = "A Steam, Battle.net, and PlayStation title watcher that reports updates via Discord."
authors = ["Ethan C <16727756+EthanC@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
loguru-discord = "^1.2.2"
httpx = "^0.27.0"
discord-webhook = "^1.3.1"

[tool.poetry.dev-dependencies]
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["I"]
